# Realtime-chat

./: .gitignore  app-flow.md  backend-schema.md  design.md  docker-compose.yml  implementation-plan.md  prd.md  trd.md
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/api/endpoints/: auth.py  chat.py
backend/app/websocket/: manager.py
backend/migrations/: env.py
backend/scratch/: init_db.py  migrate_profile.py
frontend/: package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/account/: Settings.jsx
frontend/src/components/auth/: Login.jsx  Signup.jsx
frontend/src/components/chat/: ChatInterface.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/store/: useChatStore.js
